[package]
name = "cain"
version = "0.1.1"
description = "Procedural macro to transform sequential branches into nested branches"
repository = "https://github.com/frxstrem/cain"
edition = "2021"
authors = ["Fredrik Østrem <frx.apps@gmail.com>"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.34"
quote = "1.0.10"
syn = { version = "1.0.84", features = [
  "full",
  "visit-mut",
] }
